# pyqg-jax

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/: changes.rst  conf.py  examples.barotropic.md  examples.basicstep.md  examples.batchstep.md  examples.coarsen.md  examples.diagnostics.md  examples.implparam.md  examples.onlinetrain.md  examples.rst  examples.sqg.md  index.rst  install.rst  license.rst  reference.diagnostics.rst  reference.models.bt_model.rst  reference.models.qg_model.rst  reference.models.rst  reference.models.sqg_model.rst  reference.parameterizations.backscatterbiharmonic.rst  reference.parameterizations.noop.rst  reference.parameterizations.rst  reference.parameterizations.smagorinsky.rst  reference.parameterizations.zannabolton2020.rst  reference.rst  reference.state.rst  reference.steppers.rst  requirements.txt
docs/_static/css/: pyqg-jax-fix-theme.css
pyqg/: kernel.py  model.py  qg_model.py  utils.py
src/pyqg_jax/: __init__.py  _kernel.py  _model.py  _spectral.py  _utils.py  bt_model.py  diagnostics.py  kernel.py  model.py  qg_model.py  sqg_model.py  state.py  steppers.py  utils.py
src/pyqg_jax/parameterizations/: __init__.py  _defs.py  _parameterized_model.py  _parametrized_model.py  backscatterbiharmonic.py  noop.py  smagorinsky.py  zannabolton2020.py
tests/: requirements.txt  test_array_real_dtype.py  test_backscatterbiharmonic_param.py  test_bt_model.py  test_cfl.py  test_ens_spec.py  test_euler_stepper.py  test_full_state.py  test_grid.py  test_ispec.py  test_ke_spec.py  test_noop_param.py  test_parameterized_model.py  test_partial_state.py  test_precision.py  test_prng_counter_param.py  test_qg_model.py  test_qg_model_no_solver.py  test_requirements.txt  test_smagorinsky_param.py  test_spectral.py  test_sqg_model.py  test_stepped_model.py  test_stepper_state.py  test_summarize_object.py  test_total_ke.py  test_zannabolton2020_param.py
