[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyqg-jax"
description = "Quasigeostrophic model in JAX (port of PyQG)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Karl Otness"},
]
dependencies = [
  "jax>=0.4.6",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Oceanography",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/karlotness/pyqg-jax"
Documentation = "https://pyqg-jax.readthedocs.io"
"Source Code" = "https://github.com/karlotness/pyqg-jax"
"Bug Tracker" = "https://github.com/karlotness/pyqg-jax/issues"

[tool.flit.sdist]
include = ["tests/", "LICENSE.txt"]
exclude = ["**/*~"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
  "--import-mode=importlib",
]

[tool.ruff]
extend-exclude = ["docs/_build/"]
src = ["src"]
line-length = 88
respect-gitignore = true
fix = false

[tool.ruff.lint]
select = ["E", "F", "W", "B", "RUF", "UP", "C4", "YTT", "T10", "T20", "ICN", "SIM", "NPY", "PT"]
ignore = ["E741", "E743", "UP015", "SIM108"]

[tool.ruff.lint.flake8-import-conventions]
[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"jax.numpy" = "jnp"

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"
